fix: header spacing

--- a/monogram/styles/header.css
+++ b/monogram/styles/header.css
@@ -5,7 +5,9 @@
 .header {
   width: 100%;
   height: 20rem;
-  background-image: url("../assets/background.png");
+  background-image: url("../assets/background-header.jpg");
   background-size: 100%;
   background-repeat: no-repeat;
+  background-position-y: -500px;
+  padding: 10px 7px;
 }
