--- a/monogram/styles/navbar.css
+++ b/monogram/styles/navbar.css
@@ -8,7 +8,7 @@
   height: 4rem;
   padding-left: 3px;
   padding-right: 3px;
-  margin: 1rem;
+  margin-right: 1rem;
   background-color: var(--blue);
   color: var(--white);
 }
